Sat Mar 16 21:43:32 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: std::less provides a total order over
	  pointers, so we can just use that to implement
	  filter_group_id::operator<() - we only need a consistent order so we
	  can use it as the key to a std::map.

Fri Mar 15 06:36:32 GMT 2013  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc,
	  common/pretty.h: Avoid needlessly casting away const-ness in
	  debug logging.

Fri Mar 15 06:31:32 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.cc,matcher/multixorpostlist.cc: Add a
	  couple more LOGCALL annotations.

Fri Mar 15 06:27:42 GMT 2013  Dan Colish <dcolish@gmail.com>

	* api/registry.cc,common/pretty.h: Fix incorrect LOGCALL return value.

Fri Mar 15 06:24:11 GMT 2013  Olly Betts <olly@survex.com>

	* api/registry.cc,common/Makefile.mk,common/registryinternal.h:
	  common/registryinternal.h is only included by api/registry.cc so
	  just inline its contents.

Fri Mar 15 06:11:14 GMT 2013  Olly Betts <olly@survex.com>

	* api/registry.cc: No need to explicitly default initialise std::map
	  members or the base class.

Fri Mar 08 04:05:31 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc: Fix
	  multipass compaction not to damage document values, and to merge the
	  database stats correctly.  (fixes #615)
	* tests/api_compact.cc: Add regression test compactmultipass1.

Thu Mar 07 00:34:46 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* tests/api_anydb.cc: Added tradweight4 testcase to test TradWeight
	  with an RSet for weighting documents.

Wed Mar 06 08:55:12 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: gs package has been replaced by ghostscript package in
	  current Debian and Ubuntu releases.

Tue Feb 19 04:17:19 GMT 2013  Olly Betts <olly@survex.com>

	* common/Tokeniseise.pm: Add the ability to append lines to the
	  header.
